--- a/static/main.css
+++ b/static/main.css
@@ -3,17 +3,17 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    background-image: url('images/DSC_0079.jpg');
+    background-image: url('images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
 
 .container {
-    max-width: 800px;
+    max-width: 900px;
     margin: 100px auto;
     border-radius: 5px;
-    background: rgba(255, 255, 255, 0.86);
+    background: rgba(255, 255, 255, 1);
 }
 
 .sidebar {
@@ -39,7 +39,6 @@ body {
 }
 
 .menuitem {
-    font-family: Georgia, 'Times New Roman', Times, serif;
     flex-grow: 1;
     cursor: pointer;
     text-align: center;
@@ -53,7 +52,6 @@ body {
 }
 
 .header {
-    font-family: 'Playfair Display SC', serif;
     background-repeat: repeat-y;
     font-size: 80px;
     line-height: 110px;
@@ -91,7 +89,6 @@ h4,
 h5,
 h6 {
     color: #345250;
-    font-family: 'Cardo', serif;
     font-weight: bold;
     font-style: italic;
     letter-spacing: 0.1em;
@@ -106,7 +103,6 @@ h3>em {
     color: #696e71;
     /* background: #292929; */
     display: inline-block;
-    font-family: 'Georgia', serif;
     font-style: italic;
     font-size: 13px;
     line-height: 22px;
@@ -114,7 +110,6 @@ h3>em {
 }
 
 p {
-    font-family: GEORGIA;
     text-align: justify;
 }
 
