--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -46,31 +46,10 @@
 }
 
 /* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-bridesmaides {
-  background-position: 0 -3179px;
-  height: 50px;
-  width: 361px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-crate-and-barrel {
-  background-position: 0 -3301px;
-  height: 108px;
-  width: 161px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .heading-festivities {
   background-position: 0 -999px;
   height: 126px;
   width: 449px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-groomsmen {
-  background-position: 0 -3239px;
-  height: 52px;
-  width: 346px;
 }
 
 /* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
@@ -81,97 +60,6 @@
 }
 
 /* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2007 {
-  background-position: 0 -804px;
-  height: 185px;
-  width: 258px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2008 {
-  background-position: 0 -1135px;
-  height: 167px;
-  width: 287px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2009 {
-  background-position: 0 -2745px;
-  height: 163px;
-  width: 210px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2010 {
-  background-position: 0 -2918px;
-  height: 163px;
-  width: 193px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2011 {
-  background-position: 0 -1513px;
-  height: 162px;
-  width: 262px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2012 {
-  background-position: 0 -2042px;
-  height: 163px;
-  width: 238px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-history-2013 {
-  background-position: 0 -2371px;
-  height: 163px;
-  width: 202px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-hotel-indigo {
-  background-position: 0 -2544px;
-  height: 191px;
-  width: 203px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-love-small {
-  background-position: 0 -4047px;
-  height: 17px;
-  width: 105px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-meet-the-bridesmaides-over {
-  background-position: 0 -1886px;
-  height: 146px;
-  width: 361px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-meet-the-bridesmaides {
-  background-position: 0 -3655px;
-  height: 146px;
-  width: 361px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-meet-the-groomsmen-over {
-  background-position: 0 -2215px;
-  height: 146px;
-  width: 346px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-meet-the-groomsmen {
-  background-position: 0 -3811px;
-  height: 146px;
-  width: 346px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .heading-registry {
   background-position: 0 -3091px;
   height: 78px;
@@ -179,31 +67,10 @@
 }
 
 /* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-rest-your-head {
-  background-position: 0 -716px;
-  height: 78px;
-  width: 596px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .heading-to-do {
   background-position: 0 -3967px;
   height: 30px;
   width: 197px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-to-eat {
-  background-position: 0 -4007px;
-  height: 30px;
-  width: 203px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.heading-west-elm {
-  background-position: 0 -3419px;
-  height: 108px;
-  width: 161px;
 }
 
 /* line 106, icn/*.png */
@@ -219,27 +86,6 @@
 }
 
 /* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.icn-bridal-party {
-  background-position: 0 0;
-  height: 338px;
-  width: 302px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.icn-history-close {
-  background-position: 0 -962px;
-  height: 69px;
-  width: 69px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.icn-history-more {
-  background-position: 0 -663px;
-  height: 69px;
-  width: 69px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .icn-indicator-off {
   background-position: 0 -1066px;
   height: 15px;
@@ -251,13 +97,6 @@
   background-position: 0 -1041px;
   height: 15px;
   width: 15px;
-}
-
-/* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
-.icn-live-map {
-  background-position: 0 -584px;
-  height: 69px;
-  width: 69px;
 }
 
 /* line 60, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
@@ -696,7 +535,7 @@ z-index:99999;
   top: 0;
   height: 100%;
   width: 100%;
-  background: url(../img/bg/backgroundObject6-0.jpg) no-repeat left top;
+  background: url(../img/bg/backgroundObject6-0.png) no-repeat left top;
 }
 
 #rsvp .second {
@@ -706,7 +545,128 @@ z-index:99999;
   top: 0;
   height: 100%;
   width: 100%;
-  background: url(../img/bg/backgroundObject6-1.jpg) no-repeat left top;
+  background: url(../img/bg/backgroundObject6-1.png) no-repeat left top;
+}
+
+#rsvpILabel {
+  position: absolute;
+  font-size: 250%;
+  left: 15%;
+  top: 20%;
+  height: 100px;
+  width: 100px;
+  color: rgb(32, 31, 107);
+}
+
+#rsvpSelectName {
+  position: absolute;
+  font-size: 35px;
+  left: 16.5%;
+  top: 20%;
+  height: 50px;
+  width: 300px;
+  color: rgb(32, 31, 107);
+}
+
+#rsvpButtonAccept {
+  position: absolute;
+  left: 15%;
+  top: 30%;
+  height: 50px;
+  width: 300px;
+}
+
+#rsvpButtonLabelAccept {
+  position: absolute;
+  font-size: 35px;
+  left: 17%;
+  top: 30%;
+  height: 50px;
+  width: 300px;
+}
+
+#rsvpButtonDecline {
+  position: absolute;
+  left: 15%;
+  top: 35%;
+  height: 50px;
+  width: 300px;
+}
+
+#rsvpButtonLabelDecline {
+  position: absolute;
+  font-size: 35px;
+  left: 17%;
+  top: 35%;
+  height: 50px;
+  width: 300px;
+}
+
+#rsvpDietaryReqLabel {
+  position: absolute;
+  font-size: 35px;
+  left: 15%;
+  top: 44%;
+  height: 50px;
+  width: 50%;
+}
+
+#rsvpDietaryReq {
+  position: absolute;
+  font-size: 35px;
+  left: 15%;
+  top: 50%;
+  height: 50px;
+  width: 30%;
+}
+
+#rsvpSelectShuttleLabel {
+  position: absolute;
+  font-size: 35px;
+  left: 15%;
+  top: 59%;
+  height: 100px;
+  width: 70%;
+}
+
+#rsvpSelectShuttle {
+  position: absolute;
+  font-size: 35px;
+  right: 15%;
+  top: 65%;
+  height: 50px;
+  width: 200px;
+}
+
+#rsvpPreDinnerLabel{
+  position: absolute;
+  font-size: 35px;
+  left: 15%;
+  top: 75%;
+  height: 50px;
+  width: 70%;
+}
+
+#rsvpSelectPreDinner{
+  position: absolute;
+  font-size: 35px;
+  left: 15%;
+  top: 80%;
+  height: 50px;
+  width: 200px;
+}
+
+#rsvpSubmitButton{
+  position: absolute;
+  font-family: "Limerence";
+  font-size: 35px;
+  color: rgb(195, 149, 13);
+  right: 1.3%;
+  bottom: 2%;
+  height: 15%;
+  width: 10%;
+  border: none;
+  background: none;
 }
 
 #rsvp .third {
@@ -716,7 +676,7 @@ z-index:99999;
   top: 0;
   height: 100%;
   width: 100%;
-  background: url(../img/bg/backgroundObject6-2.jpg) no-repeat left top;
+  background: url(../img/bg/backgroundObject6-2.png) no-repeat left top;
 }
 
 /* line 784, ../sass/screen.scss */
@@ -854,20 +814,18 @@ z-index:99999;
 /* line 902, ../sass/screen.scss */
 .carousel-control {
   position: absolute;
-  top: 50%;
-  left: 100px;
-  margin-top: -50px;
-  filter: alpha(opacity=50);
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  -moz-opacity: 0.5;
-  -khtml-opacity: 0.5;
-  opacity: 0.5;
-  text-indent: -9999px;
+  color: rgb(195, 149, 13);
+  top: 30%;
+  left: 1%;
+  margin-top: 0px;
+  font-size: 1500%;
+  text-indent: 0px;
+  text-decoration: none;
 }
 
 /* line 911, ../sass/screen.scss */
 .carousel-control.right {
-  right: 100px;
+  right: 2%;
   left: auto;
 }
 
