--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -385,8 +385,20 @@ z-index:99999;
 
 /* line 287, ../sass/screen.scss */
 #our-story {
-  height: 768px;
+  height: 836px;
   z-index: 2;
+}
+
+h1.our-story {
+  position: absolute;
+  text-align: left;
+  font-family: "Limerence";
+  font-size: 350%;
+  color: rgb(195, 149, 13);
+  left: 8%;
+  top: 10%;
+  height: 15%;
+  width: 40%;
 }
 /* line 291, ../sass/screen.scss */
 #our-story .carousel-inner {
@@ -466,49 +478,6 @@ z-index:99999;
   color: #a29061;
 }
 
-/* line 365, ../sass/screen.scss */
-#gallery {
-  height: 768px;
-}
-/* line 368, ../sass/screen.scss */
-#gallery .carousel-indicators-wrap {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 51px;
-  line-height: 51px;
-  background: #222;
-  background: rgba(0, 0, 0, 0.5);
-}
-/* line 379, ../sass/screen.scss */
-#gallery .carousel-indicators {
-  top: 22px;
-  bottom: 0;
-  left: 517px;
-  width: 350px;
-}
-/* line 385, ../sass/screen.scss */
-#gallery .carousel-indicators li {
-  margin-left: 15px;
-}
-/* line 390, ../sass/screen.scss */
-#gallery .copyright {
-  color: #ddd;
-  position: absolute;
-  top: 0;
-  right: 10%;
-  font-size: 9px;
-  font-size: 0.64286rem;
-  font-family: "brandon", sans-serif;
-  text-transform: uppercase;
-}
-/* line 399, ../sass/screen.scss */
-#gallery .copyright a, #gallery .copyright a:visited {
-  color: #ddd;
-  letter-spacing: 1px;
-}
-
 /* line 569, ../sass/screen.scss */
 #festivity-details {
   height: 836px;
@@ -563,118 +532,118 @@ z-index:99999;
 
 #rsvpILabel {
   position: absolute;
-  font-size: 250%;
+  font-size: 200%;
   left: 15%;
   top: 20%;
-  height: 100px;
-  width: 100px;
+  height: 5%;
+  width: 5%;
   color: rgb(32, 31, 107);
 }
 
 #rsvpSelectName {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 16.5%;
   top: 20%;
-  height: 50px;
-  width: 300px;
+  height: 5%;
+  width: 25%;
   color: rgb(32, 31, 107);
 }
 
 #rsvpButtonAccept {
   position: absolute;
   left: 15%;
-  top: 30%;
-  height: 50px;
-  width: 300px;
+  top: 31%;
+  height: 2%;
+  width: 2%;
 }
 
 #rsvpButtonLabelAccept {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 17%;
-  top: 30%;
-  height: 50px;
-  width: 300px;
+  top: 29.5%;
+  height: 10%;
+  width: 30%;
 }
 
 #rsvpButtonDecline {
   position: absolute;
   left: 15%;
-  top: 35%;
-  height: 50px;
-  width: 300px;
+  top: 36.5%;
+  height: 2%;
+  width: 2%;
 }
 
 #rsvpButtonLabelDecline {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 17%;
   top: 35%;
-  height: 50px;
-  width: 300px;
+  height: 10%;
+  width: 30%;
 }
 
 #rsvpDietaryReqLabel {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 15%;
   top: 44%;
-  height: 50px;
+  height: 5%;
   width: 50%;
 }
 
 #rsvpDietaryReq {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 15%;
   top: 50%;
-  height: 50px;
+  height: 5%;
   width: 30%;
 }
 
 #rsvpSelectShuttleLabel {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 15%;
   top: 59%;
-  height: 100px;
+  height: 15%;
   width: 70%;
 }
 
 #rsvpSelectShuttle {
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   right: 15%;
   top: 65%;
-  height: 50px;
-  width: 200px;
+  height: 5%;
+  width: 25%;
 }
 
 #rsvpPreDinnerLabel{
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 15%;
   top: 75%;
-  height: 50px;
+  height: 5%;
   width: 70%;
 }
 
 #rsvpSelectPreDinner{
   position: absolute;
-  font-size: 35px;
+  font-size: 200%;
   left: 15%;
   top: 80%;
-  height: 50px;
-  width: 200px;
+  height: 5%;
+  width: 25%;
 }
 
 #rsvpSubmitButton{
   position: absolute;
   font-family: "Limerence";
-  font-size: 35px;
+  font-size: 200%;
   color: rgb(195, 149, 13);
-  right: 1.3%;
+  right: 2%;
   bottom: 2%;
   height: 15%;
   width: 10%;
@@ -845,7 +814,6 @@ z-index:99999;
 /* line 917, ../sass/screen.scss */
 .carousel-control:hover,
 .carousel-control:focus {
-  color: #ffffff;
   text-decoration: none;
   filter: alpha(opacity=90);
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
