--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -741,12 +741,14 @@ h1.rsvp {
 #rsvpSubmitButton{
   position: absolute;
   font-family: "Limerence";
-  font-size: 200%;
+  font-size: 270%;
   color: rgb(185, 162, 94);
-  right: 2%;
+  text-decoration-line: underline;
+  text-decoration-style: single;
+  right: 1.3%;
   bottom: 2%;
   height: 15%;
-  width: 10%;
+  width: 11%;
   border: none;
   background: none;
 }
