--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -740,11 +740,14 @@ h1.rsvp {
 
 #rsvpSubmitButton{
   position: absolute;
+  text-align: right;
+  padding-left: 0%;
+  padding-right: 0%;
   font-family: "Limerence";
-  font-size: 270%;
+  font-size: 250%;
   color: rgb(185, 162, 94);
   text-decoration-line: underline;
-  right: 1.3%;
+  right: 1.5%;
   bottom: 2%;
   height: 15%;
   width: 11%;
