--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -596,9 +596,11 @@ h1.rsvp {
   right: 20%;
   top: 30%;
   height: 20%;
+  /* Commented out when rsvp split to 2 sections
   border-bottom-style: double;
   border-bottom-color: rgb(163, 0, 50);
   cursor: pointer;
+  */
 }
 
 #presentRSVPForm {
@@ -609,7 +611,7 @@ h1.rsvp {
   width: 100%;
   background: none;
 }
-
+/* Commented out when rsvp split to 2 sections
 #rsvp .first {
   visibility: visible;
   position: absolute;
@@ -619,9 +621,13 @@ h1.rsvp {
   width: 100%;
   background: url(../img/bg/backgroundObject6-0.png) no-repeat left top;
 }
+*/
 
-#rsvp .second {
-  visibility: hidden;
+#rsvpForm {
+  height: 836px;
+}
+
+#rsvpForm .second {
   position: absolute;
   left: 0;
   top: 0;
@@ -755,7 +761,7 @@ h1.rsvp {
   background: none;
 }
 
-#rsvp .third {
+#rsvpForm .third {
   visibility: hidden;
   position: absolute;
   left: 0;
@@ -765,7 +771,7 @@ h1.rsvp {
   background: url(../img/bg/backgroundObject6-2.png) no-repeat left top;
 }
 
-h1.thanks {
+#rsvpForm h1.thanks {
   position: absolute;
   text-align: center;
   font-family: "Limerence";
